fixed download modal spacing issues

--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -77,7 +77,7 @@ body {
 }
 
 //Controls Angular View Injections
-#main {
+#viewContainer {
   padding: 0px;
   margin: 0px;
   width: 100%;
